fix(accueil): remlace z-index par translateZ

--- a/style_omf_accueil.scss
+++ b/style_omf_accueil.scss
@@ -279,9 +279,9 @@
   }
   100% {
     opacity: 0; /*fait disparaitre le loader*/
-    z-index: -1; /*permet de faire passer le loader en arrire plan et permet au btn de fonctionner*/
+    transform: translateZ(1000px);/*Axe de profondeur - permet d'envoyer le loader en profondeur et donc passe arriere plan et permet au btn de fonctionner*/
+  }
     }
-}
 .loading {
   /* création du loader*/
   border: 30px solid $secondaire;
